--- a/service/package.json
+++ b/service/package.json
@@ -12,13 +12,18 @@
   "license": "MIT",
   "dependencies": {
     "@chainsafe/libp2p-noise": "^6.2.0",
+    "@libp2p/bootstrap": "^1.0.6",
     "@libp2p/floodsub": "^1.0.6",
+    "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
     "@libp2p/pubsub-peer-discovery": "^5.0.2",
     "@libp2p/tcp": "^1.0.11",
-    "libp2p": "0.37.2"
+    "@libp2p/webrtc-direct": "^1.0.2",
+    "libp2p": "0.37.2",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.9",
     "ts-node": "^9.1.1",
     "typescript": "^4.5.2"
   },
