--- a/browser/package.json
+++ b/browser/package.json
@@ -1,11 +1,12 @@
 {
   "name": "archaeologist-browser-test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Libp2p node for browser testing",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "vite",
+    "postinstall": "patch-package"
   },
   "license": "MIT",
   "dependencies": {
@@ -14,14 +15,16 @@
     "@libp2p/floodsub": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
-    "@libp2p/pubsub-peer-discovery": "^5.0.2",
+    "@libp2p/pubsub-peer-discovery": "^5.0.4",
     "@libp2p/tcp": "^1.0.11",
     "@libp2p/webrtc-direct": "^1.0.2",
     "libp2p": "0.37.2",
-    "@mapbox/node-pre-gyp": "^1.0.9"
+    "@mapbox/node-pre-gyp": "^1.0.9",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
-    "vite": "^2.8.6"
+    "vite": "^2.7.1",
+    "patch-package": "^6.4.7"
   },
   "engines": {
     "node": ">=16.13.0"
