--- a/service/package.json
+++ b/service/package.json
@@ -6,28 +6,24 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "NODE_ENV=production NODE_PATH=./build node build/index.js",
+    "start:debug": "DEBUG=libp2p:* NODE_ENV=production NODE_PATH=./build node build/index.js",
     "test": "node ./test.js",
-    "test:all": "node ./test-all.js",
-    "postinstall": "patch-package"
+    "test:all": "node ./test-all.js"
   },
   "license": "MIT",
   "dependencies": {
     "@chainsafe/libp2p-noise": "^6.2.0",
     "@libp2p/bootstrap": "^1.0.6",
-    "@libp2p/floodsub": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
-    "@libp2p/pubsub-peer-discovery": "^5.0.4",
     "@libp2p/tcp": "^1.0.11",
     "@libp2p/webrtc-direct": "^1.0.2",
-    "@libp2p/websockets": "^1.0.9",
+    "dotenv": "^16.0.1",
     "libp2p": "0.37.2",
-    "libp2p-gossipsub": "^0.13.0",
     "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "@mapbox/node-pre-gyp": "^1.0.9",
-    "patch-package": "^6.4.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.5.2"
   },
