--- a/browser/package.json
+++ b/browser/package.json
@@ -5,26 +5,24 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite",
-    "postinstall": "patch-package"
+    "start": "vite"
   },
   "license": "MIT",
   "dependencies": {
     "@chainsafe/libp2p-noise": "^6.2.0",
     "@libp2p/bootstrap": "^1.0.6",
-    "@libp2p/floodsub": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
-    "@libp2p/pubsub-peer-discovery": "^5.0.4",
     "@libp2p/tcp": "^1.0.11",
     "@libp2p/webrtc-direct": "^1.0.2",
+    "buffer": "^6.0.3",
     "libp2p": "0.37.2",
-    "@mapbox/node-pre-gyp": "^1.0.9",
+    "safe-buffer": "^5.2.1",
     "wrtc": "^0.4.7"
   },
   "devDependencies": {
-    "vite": "^2.7.1",
-    "patch-package": "^6.4.7"
+    "rollup-plugin-polyfill-node": "^0.9.0",
+    "vite": "^2.7.1"
   },
   "engines": {
     "node": ">=16.13.0"
