--- a/browser/package.json
+++ b/browser/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "vite",
+    "start:debug": "DEBUG=libp2p:* vite"
   },
   "license": "MIT",
   "dependencies": {
@@ -13,12 +14,12 @@
     "@libp2p/bootstrap": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
+    "@libp2p/websockets": "^2.0.1",
     "@libp2p/tcp": "^1.0.11",
-    "@libp2p/webrtc-direct": "^1.0.2",
+    "@libp2p/webrtc-star": "^2.0.1",
     "buffer": "^6.0.3",
     "libp2p": "0.37.2",
-    "safe-buffer": "^5.2.1",
-    "wrtc": "^0.4.7"
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
     "rollup-plugin-polyfill-node": "^0.9.0",
