--- a/service/package.json
+++ b/service/package.json
@@ -18,8 +18,12 @@
     "@libp2p/mplex": "^1.1.0",
     "@libp2p/tcp": "^1.0.11",
     "@libp2p/webrtc-direct": "^1.0.2",
+    "@libp2p/webrtc-star": "^2.0.1",
+    "@libp2p/webrtc-star-signalling-server": "^2.0.1",
+    "@libp2p/websockets": "^2.0.1",
     "dotenv": "^16.0.1",
     "libp2p": "0.37.2",
+    "peer-id": "^0.16.0",
     "wrtc": "^0.4.7"
   },
   "devDependencies": {
