refactor node code to use star signalling server

--- a/browser/package.json
+++ b/browser/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite",
-    "start:debug": "DEBUG=libp2p:* vite"
+    "start": "vite"
   },
   "license": "MIT",
   "dependencies": {
