--- a/browser/package.json
+++ b/browser/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "rollup-plugin-polyfill-node": "^0.9.0",
-    "vite": "^2.7.1"
+    "vite": "^3.0.0-beta.1"
   },
   "engines": {
     "node": ">=16.13.0"
