--- a/service/package.json
+++ b/service/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --watch 'src/**' index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "NODE_ENV=production NODE_PATH=./build node build/index.js",
-    "start:test": "NODE_ENV=production NODE_PATH=./build node build/test.js",
-    "start:debug": "DEBUG=libp2p:* NODE_ENV=production NODE_PATH=./build node build/index.js",
+    "start": "NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
+    "start:test": "NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/test.js",
+    "start:debug": "DEBUG=libp2p:* NODE_ENV=production NODE_PATH=./build node build/src/index.js",
     "peer-id-gen": "node ./src/scripts/peer-id-gen.js",
     "test": "node ./test.js",
     "test:all": "node ./test-all.js"
