--- a/browser/package.json
+++ b/browser/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^3.3.0",
     "@chainsafe/libp2p-noise": "^6.2.0",
     "@libp2p/bootstrap": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
