--- a/service/package.json
+++ b/service/package.json
@@ -15,7 +15,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^3.3.0",
     "@chainsafe/libp2p-noise": "^6.2.0",
+    "@koush/wrtc": "^0.5.3",
     "@libp2p/bootstrap": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
@@ -27,8 +29,7 @@
     "dotenv": "^16.0.1",
     "jsonfile": "^6.1.0",
     "libp2p": "^0.37.3",
-    "peer-id": "^0.16.0",
-    "wrtc": "^0.4.7"
+    "peer-id": "^0.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.18",
