--- a/service/package.json
+++ b/service/package.json
@@ -19,6 +19,7 @@
     "@chainsafe/libp2p-noise": "^6.2.0",
     "@koush/wrtc": "^0.5.3",
     "@libp2p/bootstrap": "^1.0.6",
+    "@libp2p/floodsub": "^3.0.2",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
     "@libp2p/tcp": "^1.0.11",
