--- a/browser/package.json
+++ b/browser/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@libp2p/floodsub": "^1.0.6",
     "@chainsafe/libp2p-noise": "^6.2.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@libp2p/bootstrap": "^1.0.6",
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
-    "@libp2p/websockets": "^2.0.1",
     "@libp2p/tcp": "^1.0.11",
     "@libp2p/webrtc-star": "^2.0.1",
+    "@libp2p/websockets": "^2.0.1",
+    "events": "^3.3.0",
     "buffer": "^6.0.3",
     "libp2p": "0.37.2",
     "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
+    "@types/node": "^18.6.3",
     "rollup-plugin-polyfill-node": "^0.9.0",
     "vite": "^3.0.0-beta.1"
   },
