--- a/service/package.json
+++ b/service/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "nodemon": "^2.0.18",
     "ts-node": "^9.1.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "rollup-plugin-polyfill-node": "^0.10.2",
     "typescript": "^4.7.4"
   },
   "engines": {
