--- a/service/package.json
+++ b/service/package.json
@@ -22,6 +22,7 @@
     "@libp2p/kad-dht": "^1.0.16",
     "@libp2p/mplex": "^1.1.0",
     "@libp2p/tcp": "^1.0.11",
+    "@libp2p/webrtc-direct": "^2.0.1",
     "@libp2p/webrtc-star": "^2.0.1",
     "@libp2p/webrtc-star-signalling-server": "^2.0.1",
     "@libp2p/websockets": "^1.0.9",
