--- a/browser/package.json
+++ b/browser/package.json
@@ -29,6 +29,7 @@
     "@types/events": "^3.0.0",
     "@types/node": "^18.6.3",
     "rollup-plugin-polyfill-node": "^0.9.0",
+    "ethers": "^5.6.9",
     "vite": "^3.0.0-beta.1"
   },
   "engines": {
