--- a/service/package.json
+++ b/service/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --watch 'src/**' index.ts",
     "build": "tsc -p tsconfig.json",
+    "approve": "NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/approve.js",
     "start": "NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
     "start:test": "NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/test.js",
     "start:debug": "DEBUG=libp2p:* NODE_ENV=production NODE_PATH=./build node build/src/index.js",
