--- a/service/package.json
+++ b/service/package.json
@@ -36,7 +36,9 @@
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "arweave": "^1.11.6",
     "cross-env": "^7.0.3",
+    "ecies-geth": "^1.6.5",
     "nodemon": "^2.0.18",
     "rollup-plugin-polyfill-node": "^0.10.2",
     "ts-node": "^9.1.1",
