--- a/service/package.json
+++ b/service/package.json
@@ -30,6 +30,7 @@
     "chalk": "^5.0.1",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "it-pushable": "^3.1.0",
     "jsonfile": "^6.1.0",
     "libp2p": "^0.37.2",
     "peer-id": "^0.16.0"
