Move arweave params to env

--- a/service/.env.example
+++ b/service/.env.example
@@ -16,3 +16,9 @@ FEE_PER_BYTE = 1
 PROVIDER_URL="http://127.0.0.1:8545"
 SARCO_DIAMOND_ADDRESS=0x0
 SARCO_TOKEN_ADDRESS=0x0
+
+ARWEAVE_HOST=arweave.net
+ARWEAVE_PORT=443
+ARWEAVE_PROTOCOL=https
+ARWEAVE_TIMEOUT=20000
+ARWEAVE_LOGGING=false
