--- a/browser/package.json
+++ b/browser/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "DEBUG=libp2p:webrtc-star vite"
   },
   "license": "MIT",
   "dependencies": {
