--- a/service/package.json
+++ b/service/package.json
@@ -12,7 +12,7 @@
     "register": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/register-profile.js",
     "update": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/update-profile.js",
     "start": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
-    "start:test": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/test/start.js",
+    "start:test": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/start_multiple.js",
     "start:debug": "cross-env NODE_ENV=production DEBUG=libp2p:* NODE_PATH=./build node build/src/index.js",
     "peer-id-gen": "node ./src/scripts/peer-id-gen.js",
     "test": "cross-env NODE_ENV=test NODE_PATH=./build node -r dotenv/config --experimental-specifier-resolution=node build/src/test/index.js dotenv_config_path=.env.test",
