--- a/service/package.json
+++ b/service/package.json
@@ -30,6 +30,7 @@
     "@libp2p/webrtc-star": "^2.0.1",
     "@libp2p/webrtc-star-signalling-server": "^2.0.1",
     "@libp2p/websockets": "^1.0.9",
+    "@sarcophagus-org/sarcophagus-v2-contracts": "^0.1.0",
     "@types/node": "^18.0.0",
     "chalk": "^5.0.1",
     "dotenv": "^16.0.1",
