add local development guide, set environment defaults based on hardhat network defaults, fix broken import in profile-setup script

--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "module": "esnext",
     "declaration": true,
-    "inlineSourceMap": false,
+    "inlineSourceMap": true,
     "resolveJsonModule": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
