refactor register for cli

--- a/service/package.json
+++ b/service/package.json
@@ -11,6 +11,7 @@
     "accuse": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/third_party/accuse.js",
     "register": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/register-profile.js",
     "update": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/update-profile.js",
+    "cli": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/cli/register/index.js",
     "start": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
     "start:local": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/run_local/index.js",
     "start:debug": "cross-env NODE_ENV=production DEBUG=libp2p:* NODE_PATH=./build node build/src/index.js",
@@ -33,6 +34,7 @@
     "@sarcophagus-org/sarcophagus-v2-contracts": "^0.1.0",
     "@types/node": "^18.0.0",
     "chalk": "^5.0.1",
+    "columnify": "^1.6.0",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.3",
     "dotenv": "^16.0.1",
