--- a/service/package.json
+++ b/service/package.json
@@ -11,7 +11,7 @@
     "accuse": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/third_party/accuse.js",
     "register": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/register-profile.js",
     "update": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/update-profile.js",
-    "cli": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/cli/register/index.js",
+    "cli": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/cli/run.js",
     "start": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
     "start:local": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/run_local/index.js",
     "start:debug": "cross-env NODE_ENV=production DEBUG=libp2p:* NODE_PATH=./build node build/src/index.js",
@@ -36,6 +36,7 @@
     "chalk": "^5.0.1",
     "columnify": "^1.6.0",
     "command-line-args": "^5.2.1",
+    "command-line-commands": "^3.0.2",
     "command-line-usage": "^6.1.3",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
