--- a/service/package.json
+++ b/service/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "description": "Service used to perform jobs in the Sarcophagus ecosystem",
   "type": "module",
+  "bin": {
+    "cli": "build/src/cli/run.js"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**' index.ts",
     "build": "tsc -p tsconfig.json",
     "approve": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/approve.js",
     "clean": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/third_party/clean.js",
     "accuse": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/third_party/accuse.js",
-    "register": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/register-profile.js",
-    "update": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/update-profile.js",
     "cli": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/cli/run.js",
+    "cli:prepare": "npm run build && chmod +x build/src/cli/run.js && npm link",
     "start": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/index.js",
     "start:local": "cross-env NODE_ENV=production NODE_PATH=./build node --experimental-specifier-resolution=node build/src/scripts/run_local/index.js",
     "start:debug": "cross-env NODE_ENV=production DEBUG=libp2p:* NODE_PATH=./build node build/src/index.js",
