--- a/service/package.json
+++ b/service/package.json
@@ -23,15 +23,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@chainsafe/libp2p-noise": "^6.2.0",
+    "@chainsafe/libp2p-noise": "^10.0.0",
     "@koush/wrtc": "^0.5.3",
-    "@libp2p/bootstrap": "^1.0.6",
-    "@libp2p/kad-dht": "^1.0.16",
-    "@libp2p/mplex": "^1.1.0",
-    "@libp2p/tcp": "^1.0.11",
-    "@libp2p/webrtc-star": "^2.0.1",
-    "@libp2p/webrtc-star-signalling-server": "^2.0.1",
-    "@libp2p/websockets": "^1.0.9",
+    "@libp2p/bootstrap": "^5.0.0",
+    "@libp2p/kad-dht": "^5.0.1",
+    "@libp2p/mplex": "^7.0.0",
+    "@libp2p/webrtc-star": "^5.0.3",
+    "@libp2p/webrtc-star-signalling-server": "^2.0.5",
     "@sarcophagus-org/sarcophagus-v2-contracts": "^0.1.0",
     "@types/node": "^18.0.0",
     "chalk": "^5.0.1",
@@ -41,11 +39,13 @@
     "command-line-usage": "^6.1.3",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "it-pipe": "^2.0.4",
     "jsonfile": "^6.1.0",
-    "libp2p": "^0.37.2",
+    "libp2p": "^0.40.0",
     "node-schedule": "^2.1.0",
     "peer-id": "^0.16.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
