--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "libp2p": "^0.40.0",
     "node-schedule": "^2.1.0",
     "peer-id": "^0.16.0",
-    "prompt-sync": "^4.2.0",
-    "wrtc": "^0.4.7"
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
