--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "license": "MIT",
   "dependencies": {
     "@chainsafe/libp2p-noise": "^10.0.0",
-    "@koush/wrtc": "^0.5.3",
     "@libp2p/bootstrap": "^5.0.0",
     "@libp2p/kad-dht": "^5.0.1",
     "@libp2p/mplex": "^7.0.0",
@@ -44,7 +43,8 @@
     "libp2p": "^0.40.0",
     "node-schedule": "^2.1.0",
     "peer-id": "^0.16.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
