--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,9 @@ services:
       - |
         npm run peer-id-gen
         npm run cli start
+    volumes:
+      - type: bind
+        source: ./peer-id.json
+        target: /peer-id.json
     environment:
       FORCE_COLOR: 1
