--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: ./
       target: production
+    restart: on-failure
+    env_file:
+      - ./.env
     command:
       - /bin/bash
       - -c
@@ -14,6 +17,6 @@ services:
     volumes:
       - type: bind
         source: ./peer-id.json
-        target: /peer-id.json
+        target: /home/node/app/peer-id.json
     environment:
       FORCE_COLOR: 1
