--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "command-line-usage": "^6.1.3",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "inquirer": "^9.1.4",
     "it-pipe": "^2.0.4",
     "jsonfile": "^6.1.0",
     "libp2p": "^0.40.0",
