--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@libp2p/webrtc-star": "^5.0.3",
     "@libp2p/webrtc-star-signalling-server": "^2.0.5",
     "@libp2p/websockets": "^5.0.1",
+    "@mapbox/node-pre-gyp": "^1.0.10",
     "@sarcophagus-org/sarcophagus-v2-contracts": "^0.7.0",
     "@types/node": "^18.0.0",
     "chalk": "^5.0.1",
