--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ ENCRYPTION_MNEMONIC=
 ## RPC provider. If running on local network, this env var is not required
 PROVIDER_URL=
 
+# URL to send notifications to
+NOTIFICATION_WEBHOOK_URL=
+
 ## List the domain associated with your archaeologist
 ## Required if running your archaeologist on websockets (recommended if not running locally)
 DOMAIN=
