Add notifications feature

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,16 @@ ENCRYPTION_MNEMONIC=
 ## RPC provider. If running on local network, this env var is not required
 PROVIDER_URL=
 
-# URL to send notifications to
+
+## OPTIONAL NOTIFICATIONS CONFIG:
+
+# Webhook
 NOTIFICATION_WEBHOOK_URL=
+
+# SENDGRID
+NOTIFICATION_SENDGRID_API_KEY=
+NOTIFICATION_SENDGRID_EMAIL=
+NOTIFICATION_SENDGRID_VERIFIED_SENDER=
 
 ## List the domain associated with your archaeologist
 ## Required if running your archaeologist on websockets (recommended if not running locally)
