Add new networks

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 ## 5 = Goerli
 ## 11155111 = Sepolia
 ## 1 = Mainnet
+## 80001 = Polygon Mumbai
+## 84531 = Base Goerli
 CHAIN_ID=31337
 
 ## Key used to sign ETH transactions
