fix domain validation

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,6 @@ ENCRYPTION_MNEMONIC=
 ## RPC provider. If running on local network, this env var is not required
 PROVIDER_URL=
 
-
 ## OPTIONAL NOTIFICATIONS CONFIG:
 
 # Webhook
@@ -31,4 +30,5 @@ NOTIFICATION_SENDGRID_VERIFIED_SENDER=
 
 ## List the domain associated with your archaeologist
 ## Required if running your archaeologist on websockets (recommended if not running locally)
+## domain is of format <subdomain>.<domain>.<domain-extension>
 DOMAIN=
