--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@libp2p/bootstrap": "^5.0.0",
     "@libp2p/kad-dht": "^5.0.1",
     "@libp2p/mplex": "^7.0.0",
-    "@libp2p/webrtc-star": "^5.0.3",
     "@libp2p/webrtc-star-signalling-server": "^2.0.5",
     "@libp2p/websockets": "^5.0.1",
     "@mapbox/node-pre-gyp": "^1.0.10",
@@ -46,8 +45,7 @@
     "libp2p": "^0.40.0",
     "node-fetch": "^3.3.1",
     "node-schedule": "^2.1.0",
-    "peer-id": "^0.16.0",
-    "wrtc": "^0.4.7"
+    "peer-id": "^0.16.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
