add arbitrum env vars and network variables

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 ## Comma-separated list of chain ids of each network you want to run  your service on.
 ## Available IDS:      
 ## 31337 = local (hardhat)
-## 5 = Goerli
 ## 11155111 = Sepolia
 ## 1 = Mainnet
 ## 80001 = Polygon Mumbai
-## 84531 = Base Goerli
+## 42161 = Arbitrum One
+
 CHAIN_IDS=
 
 ## Key used to sign ETH transactions
@@ -26,17 +26,14 @@ GAS_MULTIPLIER=1
 # POLYGON_MAINNET_PROVIDER_URL=
 # POLYGON_MAINNET_ENCRYPTION_MNEMONIC=
 
-# GOERLI_PROVIDER_URL=
-# GOERLI_ENCRYPTION_MNEMONIC=
-
 # SEPOLIA_PROVIDER_URL=
 # SEPOLIA_ENCRYPTION_MNEMONIC=
 
 # POLYGON_MUMBAI_PROVIDER_URL=
 # POLYGON_MUMBAI_ENCRYPTION_MNEMONIC=
 
-# BASE_GOERLI_PROVIDER_URL=
-# BASE_GOERLI_ENCRYPTION_MNEMONIC=
+# ARBITRUM_PROVIDER_URL=
+# ARBITRUM_ENCRYPTION_MNEMONIC=
 
 ## OPTIONAL NOTIFICATIONS CONFIG:
 
